--- a/consult/less/styles.less
+++ b/consult/less/styles.less
@@ -18,3 +18,4 @@
 @import url('page_library.less');
 @import url('page_library_article.less');
 @import url('page_library_add_article.less');
+@import url('page_clients.less'); 
