--- a/consult/less/page_payment_history.less
+++ b/consult/less/page_payment_history.less
@@ -3,6 +3,11 @@ body.page-payment-history{
 		.history{
 			float: left;
 			width: 62%;
+			.no-payments-placeholder{
+				width: 100%;
+				height:480px;
+				background: url('../images/no-payments.png') center center no-repeat;
+			}
 			.content-block{
 				padding: 0;
 				border:solid 1px #b9d4cc;
