Оптимизация для работы в internet explorer

--- a/consult/less/schedule.less
+++ b/consult/less/schedule.less
@@ -438,6 +438,7 @@ body.page-profile-schedule{
 	float: left;
 	-webkit-user-select: none;
 	-moz-user-select:none;
+	-ms-user-select:none;
 	.freetime-grid{
 		position: static;
 		float: left;
