--- a/consult/css/styles.css
+++ b/consult/css/styles.css
@@ -3588,14 +3588,15 @@ body.page-profile-schedule > .wrapper .content .today-events .events a.btn {
   float: left;
   -webkit-user-select: none;
   -moz-user-select: none;
+  -ms-user-select: none;
 }
-/* line 441, schedule.less */
+/* line 442, schedule.less */
 .schedule-container .freetime-grid {
   position: static;
   float: left;
   width: 40px;
 }
-/* line 445, schedule.less */
+/* line 446, schedule.less */
 .schedule-container .freetime-grid p.label {
   position: absolute;
   width: 200px;
@@ -3607,40 +3608,40 @@ body.page-profile-schedule > .wrapper .content .today-events .events a.btn {
   top: 50%;
   text-align: center;
 }
-/* line 456, schedule.less */
+/* line 457, schedule.less */
 .schedule-container .freetime-grid .row {
   border-bottom: solid 1px #b9d4cc;
   height: 15px;
   background: #e5e5e5;
 }
-/* line 460, schedule.less */
+/* line 461, schedule.less */
 .schedule-container .freetime-grid .row:nth-child(even) {
   border-bottom: dotted 1px #b9d4cc;
 }
-/* line 463, schedule.less */
+/* line 464, schedule.less */
 .schedule-container .freetime-grid .row.meeting,
 .schedule-container .freetime-grid .row.online {
   background: #ffffff;
 }
-/* line 466, schedule.less */
+/* line 467, schedule.less */
 .schedule-container .freetime-grid .row.meeting .marker.meeting {
   display: block;
 }
-/* line 469, schedule.less */
+/* line 470, schedule.less */
 .schedule-container .freetime-grid .row.online .marker.online {
   display: block;
 }
-/* line 472, schedule.less */
+/* line 473, schedule.less */
 .schedule-container .freetime-grid .row.selected .marker.selector {
   display: block;
 }
-/* line 475, schedule.less */
+/* line 476, schedule.less */
 .schedule-container .freetime-grid .row .marker {
   width: 50%;
   height: 100%;
   display: none;
 }
-/* line 479, schedule.less */
+/* line 480, schedule.less */
 .schedule-container .freetime-grid .row .marker.selector {
   position: absolute;
   display: none;
@@ -3648,37 +3649,37 @@ body.page-profile-schedule > .wrapper .content .today-events .events a.btn {
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
 }
-/* line 486, schedule.less */
+/* line 487, schedule.less */
 .schedule-container .freetime-grid .row .marker.online {
   float: right;
   background: rgba(51, 152, 121, 0.4);
 }
-/* line 490, schedule.less */
+/* line 491, schedule.less */
 .schedule-container .freetime-grid .row .marker.meeting {
   float: left;
   background: rgba(250, 201, 68, 0.4);
 }
-/* line 497, schedule.less */
+/* line 498, schedule.less */
 .schedule-container .hours {
   position: relative;
   float: left;
   text-align: left;
   width: 55px;
 }
-/* line 502, schedule.less */
+/* line 503, schedule.less */
 .schedule-container .hours .hour {
   height: 32px;
   text-align: center;
   border-bottom: solid 1px #b9d4cc;
   box-sizing: border-box;
 }
-/* line 507, schedule.less */
+/* line 508, schedule.less */
 .schedule-container .hours .hour span {
   position: relative;
   font-size: 1.2rem;
   top: -1px;
 }
-/* line 514, schedule.less */
+/* line 515, schedule.less */
 .schedule-container .grid {
   position: relative;
   float: left;
@@ -3687,20 +3688,20 @@ body.page-profile-schedule > .wrapper .content .today-events .events a.btn {
   -webkit-user-select: none;
   -moz-user-select: none;
 }
-/* line 521, schedule.less */
+/* line 522, schedule.less */
 .schedule-container .grid .row {
   border-bottom: solid 1px #b9d4cc;
   height: 15px;
 }
-/* line 524, schedule.less */
+/* line 525, schedule.less */
 .schedule-container .grid .row.selected {
   background: #ddd;
 }
-/* line 527, schedule.less */
+/* line 528, schedule.less */
 .schedule-container .grid .row:nth-child(odd) {
   border-bottom: dotted 1px #b9d4cc;
 }
-/* line 531, schedule.less */
+/* line 532, schedule.less */
 .schedule-container .grid .marker {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -3714,7 +3715,7 @@ body.page-profile-schedule > .wrapper .content .today-events .events a.btn {
   background: rgba(0, 0, 0, 0.1);
   display: none;
 }
-/* line 544, schedule.less */
+/* line 545, schedule.less */
 .schedule-container .grid .weekend-marker {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -3730,7 +3731,7 @@ body.page-profile-schedule > .wrapper .content .today-events .events a.btn {
   border-color: rgba(0, 0, 0, 0.4);
   background: rgba(0, 0, 0, 0.1);
 }
-/* line 558, schedule.less */
+/* line 559, schedule.less */
 .schedule-container .grid .weekend-marker p {
   font-size: 1.2rem;
   display: block;
@@ -3738,7 +3739,7 @@ body.page-profile-schedule > .wrapper .content .today-events .events a.btn {
   margin-top: 0px;
   color: #333;
 }
-/* line 566, schedule.less */
+/* line 567, schedule.less */
 .schedule-container .grid .reserved-marker {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -3752,7 +3753,7 @@ body.page-profile-schedule > .wrapper .content .today-events .events a.btn {
   display: none;
   cursor: hand;
 }
-/* line 578, schedule.less */
+/* line 579, schedule.less */
 .schedule-container .grid .reserved-marker i.fa.fa-cog {
   cursor: pointer;
   position: absolute;
@@ -3761,86 +3762,86 @@ body.page-profile-schedule > .wrapper .content .today-events .events a.btn {
   top: 2px;
   z-index: 1;
 }
-/* line 586, schedule.less */
+/* line 587, schedule.less */
 .schedule-container .grid .reserved-marker p {
   font-size: 1.2rem;
   display: block;
   margin-left: 10px;
   margin-top: 0px;
 }
-/* line 592, schedule.less */
+/* line 593, schedule.less */
 .schedule-container .grid .reserved-marker.unwork {
   border-color: rgba(0, 0, 0, 0.4);
   background: rgba(0, 0, 0, 0.1);
 }
-/* line 595, schedule.less */
+/* line 596, schedule.less */
 .schedule-container .grid .reserved-marker.unwork i.fa.fa-cog {
   color: rgba(0, 0, 0, 0.4);
 }
-/* line 598, schedule.less */
+/* line 599, schedule.less */
 .schedule-container .grid .reserved-marker.unwork p {
   color: #666;
 }
-/* line 601, schedule.less */
+/* line 602, schedule.less */
 .schedule-container .grid .reserved-marker.unwork.selected {
   border-color: rgba(0, 0, 0, 0.5);
 }
-/* line 605, schedule.less */
+/* line 606, schedule.less */
 .schedule-container .grid .reserved-marker.skype,
 .schedule-container .grid .reserved-marker.cards {
   border-color: #33b679;
   background: rgba(51, 152, 121, 0.4);
 }
-/* line 608, schedule.less */
+/* line 609, schedule.less */
 .schedule-container .grid .reserved-marker.skype i.fa.fa-cog,
 .schedule-container .grid .reserved-marker.cards i.fa.fa-cog {
   color: #33b679;
 }
-/* line 611, schedule.less */
+/* line 612, schedule.less */
 .schedule-container .grid .reserved-marker.skype p,
 .schedule-container .grid .reserved-marker.cards p {
   color: #119457;
 }
-/* line 614, schedule.less */
+/* line 615, schedule.less */
 .schedule-container .grid .reserved-marker.skype.selected,
 .schedule-container .grid .reserved-marker.cards.selected {
   border-color: #119457;
 }
-/* line 618, schedule.less */
+/* line 619, schedule.less */
 .schedule-container .grid .reserved-marker.consult {
   border-color: #41b6ad;
   background: rgba(74, 208, 197, 0.2);
 }
-/* line 621, schedule.less */
+/* line 622, schedule.less */
 .schedule-container .grid .reserved-marker.consult i.fa.fa-cog {
   color: #41b6ad;
 }
-/* line 624, schedule.less */
+/* line 625, schedule.less */
 .schedule-container .grid .reserved-marker.consult p {
   color: #35504e;
 }
-/* line 627, schedule.less */
+/* line 628, schedule.less */
 .schedule-container .grid .reserved-marker.consult.selected {
   border-color: #1f948b;
 }
-/* line 631, schedule.less */
+/* line 632, schedule.less */
 .schedule-container .grid .reserved-marker.private {
   border-color: #fac944;
   background: rgba(250, 201, 68, 0.4);
 }
-/* line 634, schedule.less */
+/* line 635, schedule.less */
 .schedule-container .grid .reserved-marker.private i.fa.fa-cog {
   color: #d8a722;
 }
-/* line 637, schedule.less */
+/* line 638, schedule.less */
 .schedule-container .grid .reserved-marker.private p {
   color: #d39a00;
 }
-/* line 640, schedule.less */
+/* line 641, schedule.less */
 .schedule-container .grid .reserved-marker.private.selected {
   border-color: #d8a722;
 }
-/* line 644, schedule.less */
+/* line 645, schedule.less */
 .schedule-container .grid .reserved-marker .slider-top {
   left: 50%;
   margin-left: -2px;
@@ -3853,7 +3854,7 @@ body.page-profile-schedule > .wrapper .content .today-events .events a.btn {
   cursor: s-resize;
   z-index: 1;
 }
-/* line 656, schedule.less */
+/* line 657, schedule.less */
 .schedule-container .grid .reserved-marker .slider-bottom {
   left: 50%;
   margin-left: -2px;
@@ -3866,18 +3867,18 @@ body.page-profile-schedule > .wrapper .content .today-events .events a.btn {
   cursor: s-resize;
   z-index: 1;
 }
-/* line 670, schedule.less */
+/* line 671, schedule.less */
 .schedule-container .legend {
   overflow: hidden;
   font-size: 1.2rem;
 }
-/* line 673, schedule.less */
+/* line 674, schedule.less */
 .schedule-container .legend h5 {
   margin-top: 0;
   padding-top: 0;
   padding-bottom: 0;
 }
-/* line 678, schedule.less */
+/* line 679, schedule.less */
 .schedule-container .legend span {
   display: inline-block;
   width: 13px;
@@ -3885,15 +3886,15 @@ body.page-profile-schedule > .wrapper .content .today-events .events a.btn {
   top: 3px;
   margin-right: 3px;
 }
-/* line 684, schedule.less */
+/* line 685, schedule.less */
 .schedule-container .legend span.meeting {
   background: rgba(250, 201, 68, 0.4);
 }
-/* line 687, schedule.less */
+/* line 688, schedule.less */
 .schedule-container .legend span.online {
   background: rgba(51, 152, 121, 0.4);
 }
-/* line 690, schedule.less */
+/* line 691, schedule.less */
 .schedule-container .legend span.unwork {
   background: #e5e5e5;
 }
