Правки по главной

--- a/consult/less/global.less
+++ b/consult/less/global.less
@@ -350,6 +350,11 @@ header.header {
     section.library {
         background: @sky;
         padding:10px 0 20px 0;
+        .logo{
+            float: left;
+            width: 25%;
+            margin-top: 16px;
+        }
         .title {
             float: left;
             width: 25%;
