--- a/consult/css/styles.css
+++ b/consult/css/styles.css
@@ -927,29 +927,35 @@ header.header .mainmenu li a {
   padding: 10px 0 20px 0;
 }
 /* line 353, global.less */
+.footer section.library .logo {
+  float: left;
+  width: 25%;
+  margin-top: 16px;
+}
+/* line 358, global.less */
 .footer section.library .title {
   float: left;
   width: 25%;
 }
-/* line 356, global.less */
+/* line 361, global.less */
 .footer section.library .title h3 {
   color: #ffffff;
 }
-/* line 360, global.less */
+/* line 365, global.less */
 .footer section.library .library-list {
   float: right;
   width: 75%;
   margin-top: 8px;
 }
-/* line 364, global.less */
+/* line 369, global.less */
 .footer section.library .library-list h4 {
   color: #ffffff;
 }
-/* line 367, global.less */
+/* line 372, global.less */
 .footer section.library .library-list .items-container {
   width: 100%;
 }
-/* line 369, global.less */
+/* line 374, global.less */
 .footer section.library .library-list .items-container .item {
   float: left;
   width: 33%;
@@ -957,17 +963,17 @@ header.header .mainmenu li a {
   font: 400 1.6rem Roboto;
   margin: 5px 0;
 }
-/* line 375, global.less */
+/* line 380, global.less */
 .footer section.library .library-list .items-container .item:hover {
   text-decoration: underline;
 }
-/* line 382, global.less */
+/* line 387, global.less */
 .footer section.bottom {
   background: #41b6ad;
   padding: 15px 0;
   overflow: hidden;
 }
-/* line 386, global.less */
+/* line 391, global.less */
 .footer section.bottom p.copyright {
   display: block;
   float: left;
@@ -975,21 +981,21 @@ header.header .mainmenu li a {
   font: 500 1.4rem Roboto;
   margin-left: 30px;
 }
-/* line 393, global.less */
+/* line 398, global.less */
 .footer section.bottom ul.footer-menu {
   float: right;
   margin-top: 13px;
 }
-/* line 396, global.less */
+/* line 401, global.less */
 .footer section.bottom ul.footer-menu li {
   float: left;
   margin-right: 30px;
 }
-/* line 399, global.less */
+/* line 404, global.less */
 .footer section.bottom ul.footer-menu li a {
   font: 400 14px Roboto;
 }
-/* line 401, global.less */
+/* line 406, global.less */
 .footer section.bottom ul.footer-menu li a:hover {
   text-decoration: underline;
 }
