--- a/consult/less/interface.less
+++ b/consult/less/interface.less
@@ -101,6 +101,8 @@ p {
     -o-transition:background-color, color 0.3s ease;
     -moz-transition:background-color, color 0.3s ease;
     -webkit-transition:background-color, color 0.3s ease;
+    font-family:"Roboto",  sans-serif;
+    font-weight:500;
     &.small{
         padding:4px 17px 1px 17px;
     }
