--- a/consult/css/styles.css
+++ b/consult/css/styles.css
@@ -97,59 +97,61 @@ p {
   -o-transition: background-color, color 0.3s ease;
   -moz-transition: background-color, color 0.3s ease;
   -webkit-transition: background-color, color 0.3s ease;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
 }
-/* line 104, interface.less */
+/* line 106, interface.less */
 .btn.small {
   padding: 4px 17px 1px 17px;
 }
-/* line 107, interface.less */
+/* line 109, interface.less */
 .btn:hover {
   background: #52c7be;
 }
-/* line 110, interface.less */
+/* line 112, interface.less */
 .btn:active {
   background: #41b6ad;
 }
-/* line 114, interface.less */
+/* line 116, interface.less */
 .btn.red {
   background: #f85649;
   box-shadow: 0 3px 0 0 #da4134;
 }
-/* line 117, interface.less */
+/* line 119, interface.less */
 .btn.red:hover {
   background: #eb5245;
 }
-/* line 120, interface.less */
+/* line 122, interface.less */
 .btn.red:active {
   background: #da4134;
 }
-/* line 124, interface.less */
+/* line 126, interface.less */
 .btn.yellow {
   background: #fac944;
   box-shadow: 0 3px 0 0 #ffaa3e;
 }
-/* line 127, interface.less */
+/* line 129, interface.less */
 .btn.yellow:hover {
   background: #ffbb4f;
 }
-/* line 130, interface.less */
+/* line 132, interface.less */
 .btn.yellow:active {
   background: #ffaa3e;
 }
-/* line 134, interface.less */
+/* line 136, interface.less */
 .btn.green {
   background: #33b679;
   box-shadow: 0 3px 0 0 #0f9b58;
 }
-/* line 137, interface.less */
+/* line 139, interface.less */
 .btn.green:hover {
   background: #20ac69;
 }
-/* line 140, interface.less */
+/* line 142, interface.less */
 .btn.green:active {
   background: #0f9b58;
 }
-/* line 144, interface.less */
+/* line 146, interface.less */
 .btn.ghost {
   background: none;
   box-shadow: none;
@@ -157,41 +159,41 @@ p {
   color: #35504e;
   padding: 7px 17px 6px 17px;
 }
-/* line 150, interface.less */
+/* line 152, interface.less */
 .btn.ghost:hover {
   color: #ffffff;
   background: #577270;
 }
-/* line 154, interface.less */
+/* line 156, interface.less */
 .btn.ghost:active {
   color: #ffffff;
   background: #35504e;
 }
-/* line 158, interface.less */
+/* line 160, interface.less */
 .btn.ghost.red {
   color: #eb5245;
   border-color: #eb5245;
 }
-/* line 161, interface.less */
+/* line 163, interface.less */
 .btn.ghost.red:hover,
 .btn.ghost.red:active {
   color: #ffffff;
   background: #eb5245;
 }
-/* line 166, interface.less */
+/* line 168, interface.less */
 .btn.ghost.disabled {
   cursor: default;
   border-color: #b9d4cc;
   color: #b9d4cc;
 }
-/* line 170, interface.less */
+/* line 172, interface.less */
 .btn.ghost.disabled:hover {
   border-color: #b9d4cc;
   color: #b9d4cc;
   background: #ffffff;
 }
 /*ЧЕКБОКСЫ*/
-/* line 180, interface.less */
+/* line 182, interface.less */
 .container.toggle {
   display: inline-block;
   border-radius: 50px;
@@ -205,7 +207,7 @@ p {
   -webkit-transition: background 0.3s ease;
   -moz-transition: background 0.3s ease;
 }
-/* line 192, interface.less */
+/* line 194, interface.less */
 .container.toggle .handle {
   position: relative;
   border-radius: 18px;
@@ -217,15 +219,15 @@ p {
   -webkit-transition: left 0.3s ease;
   -moz-transition: left 0.3s ease;
 }
-/* line 203, interface.less */
+/* line 205, interface.less */
 .container.toggle.checked {
   background: #4ad0c5;
 }
-/* line 205, interface.less */
+/* line 207, interface.less */
 .container.toggle.checked .handle {
   left: 19px;
 }
-/* line 210, interface.less */
+/* line 212, interface.less */
 .container.checkbox {
   display: inline-block;
   border-radius: 3px;
@@ -235,11 +237,11 @@ p {
   cursor: pointer;
   background: url('../images/interface/checkbox-sprite.png') center 0 no-repeat;
 }
-/* line 218, interface.less */
+/* line 220, interface.less */
 .container.checkbox.checked {
   background-position: center -20px;
 }
-/* line 222, interface.less */
+/* line 224, interface.less */
 .container.radio {
   display: inline-block;
   border-radius: 3px;
@@ -249,11 +251,11 @@ p {
   cursor: pointer;
   background: url('../images/interface/radio-sprite.png') center 0 no-repeat;
 }
-/* line 230, interface.less */
+/* line 232, interface.less */
 .container.radio.checked {
   background-position: center -20px;
 }
-/* line 235, interface.less */
+/* line 237, interface.less */
 input[type="text"],
 textarea,
 input[type="password"] {
@@ -273,39 +275,39 @@ input[type="password"] {
   color: #8aa4a2;
   font: 400 1.2rem Roboto;
 }
-/* line 252, interface.less */
+/* line 254, interface.less */
 input[type="text"]:focus,
 textarea:focus,
 input[type="password"]:focus {
   outline: none;
   border-color: #4ad0c5;
 }
-/* line 256, interface.less */
+/* line 258, interface.less */
 input[type="text"].error,
 textarea.error,
 input[type="password"].error {
   background-color: #ffd9d9;
 }
-/* line 261, interface.less */
+/* line 263, interface.less */
 .field.required span {
   display: none;
 }
-/* line 264, interface.less */
+/* line 266, interface.less */
 .field.required.required span {
   color: #eb5245;
   display: inline;
 }
-/* line 268, interface.less */
+/* line 270, interface.less */
 .field.required label {
   color: #35504e;
   font-weight: 500;
   margin-bottom: 5px;
 }
-/* line 274, interface.less */
+/* line 276, interface.less */
 .input-container {
   position: relative;
 }
-/* line 276, interface.less */
+/* line 278, interface.less */
 .input-container .clear {
   width: 10px;
   height: 11px;
@@ -316,42 +318,42 @@ input[type="password"].error {
   z-index: 1;
   background: url('../images/interface/clear-sprite.png') center 0 no-repeat;
 }
-/* line 285, interface.less */
+/* line 287, interface.less */
 .input-container .clear:hover {
   background-position: center -11px;
 }
-/* line 288, interface.less */
+/* line 290, interface.less */
 .input-container .clear.hidden {
   display: none;
 }
-/* line 293, interface.less */
+/* line 295, interface.less */
 textarea {
   resize: none;
 }
-/* line 296, interface.less */
+/* line 298, interface.less */
 label {
   display: block;
   margin: 10px 0;
 }
-/* line 300, interface.less */
+/* line 302, interface.less */
 select.select2 {
   min-width: 300px;
 }
-/* line 304, interface.less */
+/* line 306, interface.less */
 .select2-container *:focus {
   outline: none !important;
 }
-/* line 307, interface.less */
+/* line 309, interface.less */
 .select2-container .select2-selection {
   border: solid 1px;
   border-color: #8aa4a2;
   height: 36px !important;
 }
-/* line 311, interface.less */
+/* line 313, interface.less */
 .select2-container .select2-selection .select2-selection__rendered {
   line-height: 36px !important;
 }
-/* line 314, interface.less */
+/* line 316, interface.less */
 .select2-container .select2-selection .select2-selection__arrow {
   background: url('../images/interface/dropdown-arrow.png') center center no-repeat #8aa4a2;
   width: 60px !important;
@@ -359,22 +361,22 @@ select.select2 {
   top: 0px !important;
   right: 0px !important;
 }
-/* line 320, interface.less */
+/* line 322, interface.less */
 .select2-container .select2-selection .select2-selection__arrow b {
   display: none;
 }
-/* line 326, interface.less */
+/* line 328, interface.less */
 .dashed {
   border: dashed 1px #b9d4cc;
 }
-/* line 329, interface.less */
+/* line 331, interface.less */
 .b-radius {
   border-radius: 4px;
   -moz-border-radius: 4px;
   -o-border-radius: 4px;
   -webkit-border-radius: 4px;
 }
-/* line 335, interface.less */
+/* line 337, interface.less */
 .content-block {
   padding: 30px;
   box-sizing: border-box;
@@ -390,29 +392,29 @@ select.select2 {
   background: #ffffff;
   margin-bottom: 3px;
 }
-/* line 350, interface.less */
+/* line 352, interface.less */
 .rating-block {
   border-radius: 10px;
   padding: 0 10px;
   border: solid 1px #ffaa3e;
 }
-/* line 354, interface.less */
+/* line 356, interface.less */
 .rating-block p {
   margin: 4px auto;
   text-align: center;
 }
-/* line 357, interface.less */
+/* line 359, interface.less */
 .rating-block p.value {
   font-weight: 700;
   font-size: 1.8rem;
   color: #8aa4a2;
 }
-/* line 361, interface.less */
+/* line 363, interface.less */
 .rating-block p.value .current-value {
   color: #ffaa3e;
   font-weight: bold;
 }
-/* line 367, interface.less */
+/* line 369, interface.less */
 .rating-block p.title {
   position: absolute;
   color: #ffaa3e;
@@ -424,20 +426,20 @@ select.select2 {
   width: 100%;
   left: 0;
 }
-/* line 377, interface.less */
+/* line 379, interface.less */
 .rating-block p.title span {
   background: #ffffff;
   padding: 0 3px;
   text-transform: uppercase;
 }
-/* line 386, interface.less */
+/* line 388, interface.less */
 .raiting-block.value .fa {
   color: #ffaa3e;
   font-size: 2.0rem;
   font-weight: normal;
   margin-right: 3px;
 }
-/* line 396, interface.less */
+/* line 398, interface.less */
 .raiting-block.vote .fa {
   color: #35504e;
   font-size: 2.0rem;
@@ -445,22 +447,22 @@ select.select2 {
   margin-right: 3px;
   cursor: pointer;
 }
-/* line 402, interface.less */
+/* line 404, interface.less */
 .raiting-block.vote .fa.fa-star {
   color: #ffaa3e;
 }
-/* line 405, interface.less */
+/* line 407, interface.less */
 .raiting-block.vote .fa.active {
   color: #ffaa3e;
 }
-/* line 410, interface.less */
+/* line 412, interface.less */
 a.dotts {
   display: block;
   text-decoration: none;
   cursor: pointer;
   padding: 5px 0;
 }
-/* line 415, interface.less */
+/* line 417, interface.less */
 a.dotts .fa-circle {
   color: #8aa4a2;
   font-size: 0.3rem;
@@ -468,22 +470,22 @@ a.dotts .fa-circle {
   float: left;
   margin-right: 2px;
 }
-/* line 424, interface.less */
+/* line 426, interface.less */
 ul.badge-marked li {
   background: url('../images/interface/badge.png') left 2px no-repeat;
   padding-left: 20px;
   margin: 3px 0;
 }
-/* line 432, interface.less */
+/* line 434, interface.less */
 .ui-widget-overlay.ui-front {
   background: rgba(0, 0, 0, 0.3);
 }
-/* line 435, interface.less */
+/* line 437, interface.less */
 .ui-dialog.ui-widget.ui-widget-content {
   background: #ffffff;
   padding: 10px;
 }
-/* line 438, interface.less */
+/* line 440, interface.less */
 .ui-dialog.ui-widget.ui-widget-content .ui-dialog-titlebar.ui-widget-header {
   border: none;
   background: none;
@@ -494,28 +496,28 @@ ul.badge-marked li {
   box-sizing: border-box;
   z-index: 1;
 }
-/* line 447, interface.less */
+/* line 449, interface.less */
 .ui-dialog.ui-widget.ui-widget-content .ui-dialog-titlebar.ui-widget-header .ui-dialog-titlebar-close {
   margin-right: .6em;
 }
-/* line 450, interface.less */
+/* line 452, interface.less */
 .ui-dialog.ui-widget.ui-widget-content .ui-dialog-titlebar.ui-widget-header .ui-button.ui-widget {
   border: none;
   background: none;
 }
-/* line 457, interface.less */
+/* line 459, interface.less */
 .ui-autocomplete.ui-widget {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   background: #fff;
   padding: 5px !important;
 }
-/* line 462, interface.less */
+/* line 464, interface.less */
 .ui-autocomplete.ui-widget li.ui-menu-item {
   padding: 5px !important;
   border: solid 1px #fff;
 }
-/* line 465, interface.less */
+/* line 467, interface.less */
 .ui-autocomplete.ui-widget li.ui-menu-item.ui-state-focus {
   background: #dbefe5;
   border: solid 1px #fff;
@@ -660,7 +662,7 @@ aside.additional-menu .content-block ul li.active a {
 /* line 113, global.less */
 .popup-menu .menu-container .menu a i {
   line-height: 23px;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 }
 /* line 116, global.less */
 .popup-menu .menu-container .menu a i:hover {
@@ -4559,21 +4561,69 @@ body.page-public-question-list .wrapper section.ask-question h2 {
   padding: 0;
 }
 /* line 19, page_public_question_list.less */
+body.page-public-question-list .wrapper form.ask-question-form {
+  margin-top: 20px;
+  overflow: hidden;
+  display: none;
+}
+/* line 23, page_public_question_list.less */
+body.page-public-question-list .wrapper form.ask-question-form i.fa-close {
+  position: absolute;
+  right: 30px;
+  top: 30px;
+  z-index: 1;
+  cursor: pointer;
+}
+/* line 29, page_public_question_list.less */
+body.page-public-question-list .wrapper form.ask-question-form i.fa-close:hover {
+  color: #35504e;
+}
+/* line 33, page_public_question_list.less */
+body.page-public-question-list .wrapper form.ask-question-form h4 {
+  margin-top: 0;
+  padding-top: 0;
+}
+/* line 37, page_public_question_list.less */
+body.page-public-question-list .wrapper form.ask-question-form .field.question {
+  width: 100%;
+}
+/* line 39, page_public_question_list.less */
+body.page-public-question-list .wrapper form.ask-question-form .field.question textarea {
+  height: 100px;
+}
+/* line 43, page_public_question_list.less */
+body.page-public-question-list .wrapper form.ask-question-form .field.category {
+  width: 50%;
+  float: left;
+  margin-top: 10px;
+}
+/* line 47, page_public_question_list.less */
+body.page-public-question-list .wrapper form.ask-question-form .field.category .select2-container {
+  width: 100% !important;
+}
+/* line 51, page_public_question_list.less */
+body.page-public-question-list .wrapper form.ask-question-form input[type="submit"] {
+  float: right;
+  margin-top: 10px;
+  padding: 9px 40px 7px 40px;
+}
+/* line 57, page_public_question_list.less */
 body.page-public-question-list .wrapper section.search-questions {
   overflow: hidden;
   margin-bottom: 20px;
+  margin-top: 20px;
 }
-/* line 22, page_public_question_list.less */
+/* line 61, page_public_question_list.less */
 body.page-public-question-list .wrapper section.search-questions .left {
   float: left;
   width: 62%;
   margin-right: 2%;
 }
-/* line 27, page_public_question_list.less */
+/* line 66, page_public_question_list.less */
 body.page-public-question-list .wrapper section.search-questions .right {
   overflow: hidden;
 }
-/* line 29, page_public_question_list.less */
+/* line 68, page_public_question_list.less */
 body.page-public-question-list .wrapper section.search-questions .right a {
   display: block;
   width: 100%;
@@ -4581,30 +4631,30 @@ body.page-public-question-list .wrapper section.search-questions .right a {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
 }
-/* line 38, page_public_question_list.less */
+/* line 77, page_public_question_list.less */
 body.page-public-question-list .wrapper section.questions {
   overflow: hidden;
 }
-/* line 40, page_public_question_list.less */
+/* line 79, page_public_question_list.less */
 body.page-public-question-list .wrapper section.questions .question {
   float: left;
   margin-right: 2%;
   width: 49%;
   margin-bottom: 20px;
 }
-/* line 45, page_public_question_list.less */
+/* line 84, page_public_question_list.less */
 body.page-public-question-list .wrapper section.questions .question:nth-child(2n) {
   margin-right: 0;
 }
-/* line 48, page_public_question_list.less */
+/* line 87, page_public_question_list.less */
 body.page-public-question-list .wrapper section.questions .question:nth-child(2n+1) {
   clear: left;
 }
-/* line 51, page_public_question_list.less */
+/* line 90, page_public_question_list.less */
 body.page-public-question-list .wrapper section.questions .question .author {
   overflow: hidden;
 }
-/* line 53, page_public_question_list.less */
+/* line 92, page_public_question_list.less */
 body.page-public-question-list .wrapper section.questions .question .author .photo-container {
   float: left;
   width: 50px;
@@ -4617,55 +4667,55 @@ body.page-public-question-list .wrapper section.questions .question .author .pho
   border: solid 1px #8aa4a2;
   margin-right: 20px;
 }
-/* line 65, page_public_question_list.less */
+/* line 104, page_public_question_list.less */
 body.page-public-question-list .wrapper section.questions .question .author .container {
   overflow: hidden;
 }
-/* line 67, page_public_question_list.less */
+/* line 106, page_public_question_list.less */
 body.page-public-question-list .wrapper section.questions .question .author .container p {
   margin: 2px 0;
 }
-/* line 69, page_public_question_list.less */
+/* line 108, page_public_question_list.less */
 body.page-public-question-list .wrapper section.questions .question .author .container p.name {
   color: #4ad0c5;
   font-size: 1.2rem;
   font-weight: 700;
 }
-/* line 74, page_public_question_list.less */
+/* line 113, page_public_question_list.less */
 body.page-public-question-list .wrapper section.questions .question .author .container p.job {
   color: #8aa4a2;
   font-size: 1.2rem;
   font-weight: 700;
 }
-/* line 79, page_public_question_list.less */
+/* line 118, page_public_question_list.less */
 body.page-public-question-list .wrapper section.questions .question .author .container p.category {
   font-size: 1.0rem;
   color: #8aa4a2;
   margin-top: 10px;
   font-weight: 700;
 }
-/* line 84, page_public_question_list.less */
+/* line 123, page_public_question_list.less */
 body.page-public-question-list .wrapper section.questions .question .author .container p.category span {
   color: #35504e;
 }
-/* line 91, page_public_question_list.less */
+/* line 130, page_public_question_list.less */
 body.page-public-question-list .wrapper section.questions .question h4 {
   color: #35504e;
   font-size: 1.4rem;
   font-weight: 500;
 }
-/* line 95, page_public_question_list.less */
+/* line 134, page_public_question_list.less */
 body.page-public-question-list .wrapper section.questions .question h4 span {
   color: #4ad0c5;
 }
-/* line 99, page_public_question_list.less */
+/* line 138, page_public_question_list.less */
 body.page-public-question-list .wrapper section.questions .question .answer-content,
 body.page-public-question-list .wrapper section.questions .question .question-content {
   min-height: 100px;
   max-height: 300px;
   overflow: hidden;
 }
-/* line 103, page_public_question_list.less */
+/* line 142, page_public_question_list.less */
 body.page-public-question-list .wrapper section.questions .question .answer-content .fader,
 body.page-public-question-list .wrapper section.questions .question .question-content .fader {
   position: absolute;
@@ -4688,13 +4738,13 @@ body.page-public-question-list .wrapper section.questions .question .question-co
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00ffffff', endColorstr='#ffffff', GradientType=0);
   /* IE6-9 */
 }
-/* line 119, page_public_question_list.less */
+/* line 158, page_public_question_list.less */
 body.page-public-question-list .wrapper section.questions .question a#read-more {
   color: #4ad0c5;
   font-size: 1.2rem;
   text-decoration: none;
 }
-/* line 123, page_public_question_list.less */
+/* line 162, page_public_question_list.less */
 body.page-public-question-list .wrapper section.questions .question a#read-more:hover {
   text-decoration: underline;
 }
