--- a/consult/less/page_public_question_list.less
+++ b/consult/less/page_public_question_list.less
@@ -16,9 +16,48 @@ body.page-public-question-list{
                 padding: 0;
             }
         }
+        form.ask-question-form{
+            margin-top: 20px;
+            overflow: hidden;
+            display:none;
+            i.fa-close{
+                position: absolute;
+                right:30px;
+                top: 30px;
+                z-index: 1;
+                cursor: pointer;
+                &:hover{
+                    color:@sea;
+                }
+            }
+            h4{
+                margin-top: 0;
+                padding-top: 0;
+            }
+            .field.question{
+                width: 100%;
+                textarea{
+                    height:100px;
+                }
+            }
+            .field.category{
+                width: 50%;
+                float: left;
+                margin-top: 10px;
+                .select2-container{
+                    width: 100% !important;
+                }
+            }
+            input[type="submit"]{
+                float: right;
+                margin-top: 10px;
+                padding: 9px 40px 7px 40px;
+            }
+        }
         section.search-questions{
         	overflow: hidden;
         	margin-bottom: 20px;
+            margin-top: 20px;
         	.left{
         		float: left;
         		width: 62%;
