--- a/consult/less/page_profile_settings.less
+++ b/consult/less/page_profile_settings.less
@@ -417,6 +417,7 @@ body.page-profile-settings{
                     font-weight: 500;
                     text-transform: uppercase;
                     margin-top: 15px;
+                    margin-top: 0;
                 }
                 .field{
                     float: left;
