--- a/consult/less/styles.less
+++ b/consult/less/styles.less
@@ -12,6 +12,7 @@
 @import url('page_consultant_list.less');
 @import url('page_question_list.less');
 @import url('page_public_question_list.less');
+@import url('page_public_question.less');
 @import url('page_reviews.less');
 @import url('page_consultation.less');
 @import url('modal_sign_up_consultation.less');
